# coder

./: .coder.yaml  .coderabbit.yaml  .cursorignore  .cursorrules  .dockerignore  .editorconfig  .empty-pr  .env.example  .eslintignore  .eslintrc.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .golangci.yml  .goreleaser-release-darwin.yaml  .goreleaser-release-linux.yaml  .goreleaser-release.yaml  .goreleaser.yaml  .goreleaser.yml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlint.jsonc  .mcp.json  .prettierignore  .prettierignore.include  .prettierrc  .prettierrc.yaml  .sqlfluff  .swaggo  .tflint.hcl  .vale.ini  0  ADOPTERS.md  AGENTS.md  AGENTS_PRE_GA_STATE.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  (+105 more)
site/: .editorconfig  .eslintignore  .eslintrc.yaml  .gitignore  .knip.jsonc  .markdownlint.json  .npmrc  .oxfmtrc.json  .oxfmtrc.jsonc  .oxlintrc.jsonc  .prettierignore  .prettierrc  .prettierrc.yaml  .rev-dep.config.jsonc  .tool-versions  .yarnrc  AGENTS.md  CLAUDE.md  Cargo.toml  STACK_MIGRATION_PROGRESS.md  Trunk.toml  api.ts  app.tsx  bin.go  biome.json  biome.jsonc  can-ndjson-stream.d.ts  check-compiler.mjs  check-vite-transform.mjs  chromatic.config.json  components.json  debug_gfm.js  dev.ts  embed.go  embed_fake.go  embed_slim.go  embed_static.go  embed_static_test.go  embed_test.go  getmetadata_test.go  (+37 more)
site/.storybook/: main.js  main.ts  preview-head.html  preview.js  preview.jsx  preview.tsx  vitest.setup.ts
site/__mocks__/: ghostty-web.ts
site/_jest/: setupTests.ts
site/coder-kit/: checkbox.md  color.md  (+1 more)
(+16525 files in other folders)
